--- a/application/app/src/main/res/layout/fragment_play_intro.xml
+++ b/application/app/src/main/res/layout/fragment_play_intro.xml
@@ -8,14 +8,16 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textColor="#000"
         android:text="사용방법 페이지" />
 
     <Button
+        android:id="@+id/next_button"
         android:layout_gravity="center_horizontal"
         android:layout_width="50dp"
+        android:text="시작하기"
         android:layout_height="100dp" />
 
 </LinearLayout>
