--- a/application/app/src/main/res/layout/fragment_developer_intro.xml
+++ b/application/app/src/main/res/layout/fragment_developer_intro.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#968ebd"
+    android:background="#009688"
     tools:context="org.sinabro.application.fragments.CommunityIntro">
 
     <RelativeLayout
