--- a/application/app/src/main/res/drawable/count_view_shape_selected.xml
+++ b/application/app/src/main/res/drawable/count_view_shape_selected.xml
@@ -4,7 +4,7 @@
         android:radius="25dp"/>
 
     <solid
-        android:color="@color/colorPrimary"/>
+        android:color="#FFCA28"/>
 
     <size
         android:height="25dp"
