--- a/application/app/src/main/res/layout/activity_intro.xml
+++ b/application/app/src/main/res/layout/activity_intro.xml
@@ -7,10 +7,25 @@
     android:layout_height="match_parent"
     tools:context="org.sinabro.application.activities.IntroActivity">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/intro_viewpager"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/intro_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.9"></android.support.v4.view.ViewPager>
 
+        <LinearLayout
+        android:id="@+id/current_view_count"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:gravity="center"
+        android:orientation="horizontal"></LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
