--- a/application/app/src/main/res/layout/activity_main.xml
+++ b/application/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,22 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager_main"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_main"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.9">
+
     </android.support.v4.view.ViewPager>
+
+
+
+    </LinearLayout>
 
 </LinearLayout>
 
