--- a/application/app/src/main/res/layout/activity_intro.xml
+++ b/application/app/src/main/res/layout/activity_intro.xml
@@ -13,11 +13,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v4.view.ViewPager
+        <org.sinabro.application.view.UnscrollableViewPager
             android:id="@+id/intro_viewpager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.9"></android.support.v4.view.ViewPager>
+            android:layout_weight="0.9"></org.sinabro.application.view.UnscrollableViewPager>
 
         <LinearLayout
         android:id="@+id/current_view_count"
