--- a/application/app/src/main/res/layout/dialog_add_contest_list.xml
+++ b/application/app/src/main/res/layout/dialog_add_contest_list.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/title"
+            android:id="@+id/cTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -26,7 +26,7 @@
             android:layout_margin="5dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:id="@+id/dismissBtn"
+            android:id="@+id/cDismissBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="okBtn" />
@@ -39,7 +39,7 @@
         android:scrollbarAlwaysDrawVerticalTrack="true">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/content"
+            android:id="@+id/cContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/transparent"
@@ -71,7 +71,7 @@
             android:textSize="11dp" />
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/memberNum"
+            android:id="@+id/cMemberNum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -92,7 +92,7 @@
             android:textSize="11dp" />
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/position"
+            android:id="@+id/cPosition"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -109,11 +109,32 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="마감일 : "
+            android:text="기간 : "
             android:textSize="11dp" />
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/dueDate"
+            android:id="@+id/contestTerm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@android:color/transparent"
+            android:hint="dueDate"
+            android:textSize="11dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="링크 : "
+            android:textSize="11dp" />
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/contestLink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
